fix tour scroll display on mobile

--- a/src/assets/sass/_responsive.scss
+++ b/src/assets/sass/_responsive.scss
@@ -332,7 +332,7 @@
 				justify-content: flex-start;
 			}
 			ul {
-				margin-bottom: -1200px;
+				margin: 0 0 -200px;
 				li {
 					width: 225px;
 					.wrap {
